[tool.poetry]
authors = ["Shan Senanayake <senanayake92@gmail.com>"]
description = "My advent of code solutions"
homepage = "https://github.com/ShanSenanayake/advent_of_code_2020"
license = "MIT"
name = "advent_of_code_2020"
readme = "README.md"
repository = "https://github.com/ShanSenanayake/advent_of_code_2020"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
